--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
   background: #ffff76;
   border: 0;
   outline: 0;
-  padding: 0.63em 2em;
+  padding: 2% 4%;
   border-radius: 5px;
   font-weight: 500;
   color: #333;
@@ -83,32 +83,32 @@
 }
 
 .info {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .info-socials {
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 0.5em;
-  }
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .info-socials a {
-    color: currentColor;
-    padding: 0 0.5em;
-  }
+.info-socials {
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 0.5em;
+}
+
+.info-socials a {
+  color: currentColor;
+  padding: 0 0.5em;
+}
 
 @media (max-width: 768px) {
-  .container{
+  .container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,6 +119,6 @@
   }
 
   .calculator h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 }
